--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HW - A</title>
+    <title>HW - B</title>
   </head>
   <body>
 
     <main>
     </main>
 
-    <script type="text/template" id="inputBoxTemplate">
-      <input type="text" class="name" name="" value="" placeholder="Name:...">
-      <input type="text" class="message" name="" value="" placeholder="Write your message here...">
-      <input type="button" class="postButton" name="" value="Post">
-    </script>
+
+    <form  id="formTemplate">
+      <input type="text" class="first" name="" value="" placeholder="First Name:">
+      <input type="text" class="last" name="" value="" placeholder="Last Name:">
+      <input type="text" class="address" name="" value="" placeholder="Address:">
+      <input type="text" class="phone" name="" value="" placeholder="ex(999)999-9999">
+      <input type="button" class="submitButton" name="" value="Submit">
+    </form>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
