as far as i can get

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </main>
 
     <script type="text/template" id="inputBoxTemplate">
-      <input type="text" class="name" name="" value="" placeholder="Name:...">
-      <input type="text" class="message" name="" value="" placeholder="Write your message here...">
+      <input type="text" class="title" name="" value="" placeholder="Title">
+      <textarea name="name" class="message" rows="12" cols="60"></textarea>
       <input type="button" class="postButton" name="" value="Post">
     </script>
 
