final final final B

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     </main>
 
 
-    <form  id="formTemplate">
+    <script  type="text/template" id="formTemplate">
       <input type="text" class="first" name="" value="" placeholder="First Name:">
       <input type="text" class="last" name="" value="" placeholder="Last Name:">
       <input type="text" class="address" name="" value="" placeholder="Address:">
       <input type="text" class="phone" name="" value="" placeholder="ex(999)999-9999">
       <input type="button" class="submitButton" name="" value="Submit">
-    </form>
+    </script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
